--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 img {
-  width:60%;
-  height: 100px;
+  width:100%;
+  height:80px;
+  margin:auto;
 }
 
 .blogPosts{
@@ -12,11 +13,11 @@ flex-wrap:wrap;
 
 .posts{
   background-color:#222;
-  border:2px solid blue;
   color:white;
 
-  width:25%;
+  width:30%;
   height:300px;
 
-  margin:20px;
+  margin:10px;
+  padding:10px;
 }
